<resources>
  <string name="app_name">RemoteConfigSample</string>
  <string name="search_text">Search</string>
  <string name="username_hint">Username</string>
  <string name="enter_username_text">Please enter a username.</string>
  <string name="retrofit_error">There was an error. Please try again.</string>
  <string name="name_label">Name</string>
  <string name="not_applicable_text">N/A</string>
  <string name="email_label">Email</string>
  <string name="company_label">Company</string>
  <string name="num_repos_label"># of Repos</string>
  <string name="num_gists_label"># of Gists</string>
  <string name="view_repos">View Repos</string>
</resources>
