<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="atownsend.analyticssample.MainActivity"
    android:id="@+id/constraintLayout"
    >


  <EditText
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:ems="10"
      android:id="@+id/username_edit_text"
      android:hint="@string/username_hint"
      android:maxLines="1"
      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
      android:layout_marginLeft="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintRight_toLeftOf="@+id/search_btn"
      android:layout_marginRight="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintBaseline_toBaselineOf="@+id/search_btn"
      />
  <Button
      android:text="@string/search_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/search_btn"
      app:layout_constraintTop_toTopOf="@+id/constraintLayout"
      android:layout_marginTop="16dp"
      app:layout_constraintRight_toRightOf="@+id/constraintLayout"
      android:layout_marginRight="16dp"
      android:layout_marginEnd="16dp"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/name_label"
      android:text="@string/name_label"
      android:visibility="invisible"
      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
      android:layout_marginLeft="16dp"
      android:layout_marginStart="16dp"
      tools:layout_constraintLeft_creator="1"
      app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
      android:layout_marginTop="32dp"
      />
  <ProgressBar
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/progress_bar"
      android:visibility="invisible"
      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
      app:layout_constraintTop_toTopOf="@+id/constraintLayout"
      tools:layout_constraintTop_creator="1"
      app:layout_constraintRight_toRightOf="@+id/constraintLayout"
      app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
      tools:layout_constraintBottom_creator="1"
      />
  <TextView
      android:text="@string/not_applicable_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/name_value"
      android:visibility="invisible"
      app:layout_constraintLeft_toLeftOf="@+id/email_value"
      app:layout_constraintTop_toTopOf="@+id/name_label"
      />
  <TextView
      android:text="@string/email_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/email_label"
      android:visibility="invisible"
      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
      android:layout_marginLeft="16dp"
      android:layout_marginStart="16dp"
      tools:layout_constraintLeft_creator="1"
      app:layout_constraintTop_toBottomOf="@+id/name_label"
      android:layout_marginTop="16dp"
      />
  <TextView
      android:text="@string/not_applicable_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/email_value"
      android:visibility="invisible"
      app:layout_constraintLeft_toLeftOf="@+id/company_value"
      app:layout_constraintTop_toTopOf="@+id/email_label"
      />
  <TextView
      android:text="@string/company_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/company_label"
      android:visibility="invisible"
      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
      android:layout_marginLeft="16dp"
      android:layout_marginStart="16dp"
      tools:layout_constraintLeft_creator="1"
      app:layout_constraintTop_toBottomOf="@+id/email_label"
      android:layout_marginTop="16dp"
      />
  <TextView
      android:text="@string/not_applicable_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/company_value"
      android:visibility="invisible"
      app:layout_constraintLeft_toLeftOf="@+id/num_repos_value"
      app:layout_constraintTop_toTopOf="@+id/company_label"
      />
  <TextView
      android:text="@string/num_repos_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/num_repos_label"
      android:visibility="invisible"
      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
      android:layout_marginLeft="16dp"
      android:layout_marginStart="16dp"
      tools:layout_constraintLeft_creator="1"
      app:layout_constraintTop_toBottomOf="@+id/company_label"
      android:layout_marginTop="16dp"
      />
  <TextView
      android:text="@string/num_gists_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/num_gists_label"
      android:visibility="invisible"
      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
      android:layout_marginLeft="16dp"
      android:layout_marginStart="16dp"
      tools:layout_constraintLeft_creator="1"
      app:layout_constraintTop_toBottomOf="@+id/num_repos_label"
      android:layout_marginTop="16dp"
      />
  <TextView
      android:text="@string/not_applicable_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/num_gists_value"
      android:visibility="invisible"
      app:layout_constraintLeft_toLeftOf="@+id/num_repos_value"
      app:layout_constraintTop_toTopOf="@+id/num_gists_label"
      />
  <TextView
      android:text="@string/not_applicable_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/num_repos_value"
      android:visibility="invisible"
      app:layout_constraintLeft_toRightOf="@+id/num_repos_label"
      android:layout_marginLeft="24dp"
      android:layout_marginStart="24dp"
      app:layout_constraintTop_toTopOf="@+id/num_repos_label"
      />
  <Button
      android:text="@string/view_repos"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/view_repos_btn"
      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
      android:layout_marginLeft="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintTop_toBottomOf="@+id/num_gists_label"
      android:layout_marginTop="16dp"
      android:visibility="invisible"
      />
</android.support.constraint.ConstraintLayout>
